--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ dependencies:
 - pip
 - pip:
   - torch>=1.9.0
-  - transformers>=4.9.0
+  - transformers==4.15.0
   - scikit-learn>=0.24.1
   - tqdm>=4.61.1
   - numpy>=1.20.1
@@ -20,3 +20,4 @@ dependencies:
   - smatch
   - wandb
   - PyYAML>=5.1
+  - pynvml
